2006-08-12 18:37-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Added 
	NSPSMatrix placeholder class.
	* Source/GSNibCompatibility.m: Added dummy implementation of
	NSPSMatrix placeholder class.
	* Source/NSOutlineView.m: Eliminated empty if conditional
	in encodeWithCoder:.
	* Source/NSProgressIndicator.m: Added code to initWithCoder:
	to properly unarchive.  Also implemented encodeWithCoder: and added
	GNUstep specific keys for information that GNUstep uses, but IB
	doesn't.   All GNUstep specific keys should be prefixed with
	GS*.
	* Source/NSTableColumn.m: Implemented encodeWithCoder:.
	* Source/NSTableView.m: Fixes in encodeWithCoder: to correct issues
	during load in InterfaceBuilder.

2006-08-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (displayIfNeededInRect:): Check for
	needs_display == YES, instead of NO.
	* Headers/AppKit/AppKit.h: Added missing header files and moved
	the non-OpenStep ones inside the #ifdef.
	* Source/NSTableView.m (-sizeLastColumnToFit): Don't clamp the
	value of the new column width, as the column those this by
	itself, and rely on the automatic tiling

2006-08-11  Fred Kiefer <FredKiefer@gmx.de>
	* Source/NSSlider.m (mouseDown:, trackKnob:knobRect:,
	_floatValueForMousePoint()): Moved all track related code to 
	cell class. 
	* Source/NSSliderCell.m (_floatValueForMousePoint(),
	trackMouse:...untilMouseUp:): Code previously in the NSSlider class.
	Reworked slightly to be more similar to [NSCell trackMouse:...
	untilMouseUp:].

2006-08-11 01:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Assign copies of the parameters to
	setClassName: and setExtension:.
	* Source/NSActionCell.m: Encode contro view, since it may be needed
	by IB in encodeWithCoder:
	* Source/NSButtonCell.m: Unarchive controlview for debugging purposes
	in initWithCoder:
	* Source/NSCell.m: Addecomment.

2006-08-10  Fred Kiefer <FredKiefer@gmx.de>
